Testing external dependency installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ language: java
 env:
   - OUTPUT_DIR=target ARTIFACT_NAME=hero-quest ARTIFACT_EXTENSION=.jar
 
+before_install:
+- apt install git
+- git clone git@github.com:Miguel-Fontes/essentials-validation.git
+- cd essentials-validation
+- mvn install
+- cd ~
+
 install:
 - mvn clean install -DskipTests -Dmaven.javadoc.skip=true -B -V
 
