--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@ env:
   - OUTPUT_DIR=target ARTIFACT_NAME=hero-quest ARTIFACT_EXTENSION=.jar
 
 before_install:
-- git clone https://github.com/Miguel-Fontes/essentials-validation.git
-- cd essentials-validation
-- mvn install
-- cd ..
+- wget https://github.com/Miguel-Fontes/essentials-validation/releases/download/essentials-validation-1.0/essentials-validation-1.0.tar.gz
+- tar -xvzf essentials-validation-1.0.tar.gz
+- mvn install:install-file -Dfile=./essentials-validation-1.0.tar.gz -DgroupId=br.com.miguelmf -DartifactId=essentials-validation -Dversion=1.0 -Dpackaging=jar
 
 install:
 - mvn clean install -DskipTests -Dmaven.javadoc.skip=true -B -V
