--- a/hero-quest-ports/pom.xml
+++ b/hero-quest-ports/pom.xml
@@ -13,8 +13,8 @@
     <packaging>jar</packaging>
 
     <name>hero-quest-ports</name>
-    <url>http://maven.apache.org</url>
-    <description>JUnit 5 + Compiler Source/Target 1.8</description>
+    <url>https://github.com/Miguel-Fontes/hero-quest</url>
+    <description>Hero Quest Application Ports Definition</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,31 +24,15 @@
 
     <build>
         <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.0.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.0.0</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
+
         </plugins>
     </build>
 
     <dependencies>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.0.0</version>
-            <scope>test</scope>
+            <groupId>br.com.miguelmf</groupId>
+            <artifactId>hero-quest-core</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
