--- a/hero-quest-cli/pom.xml
+++ b/hero-quest-cli/pom.xml
@@ -54,5 +54,15 @@
             <artifactId>hero-quest-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>br.com.miguelmf</groupId>
+            <artifactId>hero-quest-ports</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>br.com.miguelmf</groupId>
+            <artifactId>hero-quest-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
