Extracted events into a module

--- a/hero-quest-cli/pom.xml
+++ b/hero-quest-cli/pom.xml
@@ -64,5 +64,10 @@
             <artifactId>hero-quest-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>br.com.miguelmf</groupId>
+            <artifactId>hero-quest-event</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
